text-overflow fix

--- a/ckanext/cd2_theme/less/dia_custom.less
+++ b/ckanext/cd2_theme/less/dia_custom.less
@@ -551,7 +551,6 @@ a:hover, a:visited, a:link, a:active
   width: 150px;
   overflow: hidden;
   white-space: nowrap;
-  text-overflow: ellipsis;
 }
 
 .cohort-spanner {
